--- a/algorithms/vpg/VPG.ipynb
+++ b/algorithms/vpg/VPG.ipynb
@@ -52,16 +52,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_id = \"LunarLander-v2\"\n",
-    "env = gym.make(env_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot(rewards):\n",
     "    clear_output(True)\n",
     "#     plt.figure(figsize=(20,5))\n",
@@ -72,6 +62,23 @@
     "#     plt.title('loss')\n",
     "#     plt.plot(losses)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lunar Lander"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_id = \"LunarLander-v2\"\n",
+    "env = gym.make(env_id)"
    ]
   },
   {
@@ -192,11 +199,23 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pong"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env_id = \"PongNoFrameskip-v4\"\n",
+    "env    = make_atari(env_id)\n",
+    "env    = wrap_deepmind(env)\n",
+    "env    = wrap_pytorch(env)"
+   ]
   }
  ],
  "metadata": {
