--- a/algorithms/crar/CRAR_Experiments.ipynb
+++ b/algorithms/crar/CRAR_Experiments.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CRAR"
+    "# CRAR Experiments"
    ]
   },
   {
@@ -5201,7 +5201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
