--- a/experiments/Simple Maze Plots.ipynb
+++ b/experiments/Simple Maze Plots.ipynb
@@ -9,23 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import gym\n",
-    "from crar.crar_lightning import CRARLightning\n",
+    "from crar.crar import CRARLightning\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "SimpleMaze-v1\n"
+    }
+   ],
    "source": [
-    "env = gym.make('SimpleMaze-v1')"
+    "env = gym.make('SimpleMaze-v1')\n",
+    "print(env.id)"
    ]
   },
   {
