Update RL algorithm prototypes

--- a/experiments/Test Double-DQN.ipynb
+++ b/experiments/Test Double-DQN.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crar.experience import ReplayBuffer, Experience\n",
+    "from crar.experience import UniformReplayBuffer, Experience\n",
     "from crar.utils import compute_eps\n",
     "\n",
     "def play_step(replay_buffer, state, qnet, env, step_number, \n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,8 @@
     "BATCH_SIZE = 32\n",
     "SYNC_INTERVAL = 100\n",
     "PLOT_INTERVAL = 100\n",
-    "TOTAL_STEPS = 2000"
+    "TOTAL_STEPS = 2000\n",
+    "GRAD_CLIP = 10.0"
    ]
   },
   {
@@ -218,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replay_buffer = ReplayBuffer(REPLAY_SIZE)"
+    "replay_buffer = UniformReplayBuffer(REPLAY_SIZE)"
    ]
   },
   {
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,6 +272,8 @@
     "            losses_list.append(loss)\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
+    "            if GRAD_CLIP > 0:\n",
+    "                nn.utils.clip_grad_norm_(online_net.parameters())\n",
     "            optimizer.step()\n",
     "        \n",
     "        if step_num % SYNC_INTERVAL == 0:\n",
