--- a/experiments/Test Planning.ipynb
+++ b/experiments/Test Planning.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crar.environments import SimpleMaze\n",
-    "from crar.agent import CRARAgent"
+    "from crar.agent import CRARAgent\n",
+    "import gym"
    ]
   },
   {
@@ -23,12 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = SimpleMaze(higher_dim_obs=True)"
+    "env = gym.make('SimpleMaze-v0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.3286, -0.3668, -0.3838, -0.3795]], grad_fn=<CatBackward>)"
+       "tensor([[0.3050, 0.3529, 0.3868, 0.4035]], grad_fn=<CatBackward>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,13 +72,6 @@
    "source": [
     "q_values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
