--- a/experiments/CRAR_Experiments.ipynb
+++ b/experiments/CRAR_Experiments.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Warning: This notebook ran with an old version of the code and no longer works."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -5201,7 +5208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
